--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <body>
 
-    
+    <div class="mt10 col-6 mx-auto border rounded">
+      <h1 class="m0">JUST NOW!</h1>
+    </div>
     
     <script src="/build/built.js"></script>
 
