getting ready to hardcode a sketch of the simple components I want in this react app

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="/build/built.min.css">
     <title>When? Just now!</title>
-    <meta name="description" content="A react web app for learning the time just now.">
+    <meta name="description" content="A react web app that displays the time just now.">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="React, Space Balls, sandbox">
   </head>
 
   <body>
 
-    <div class="mt10 col-6 mx-auto border rounded">
-      <h1 class="m0">JUST NOW!</h1>
+    <div class="mt10 col-6 mx-auto">
+      <div class="border rounded">
+        <h1 class="m0 center">JUST NOW!</h1>
+      </div>
     </div>
     
     <script src="/build/built.js"></script>
