got it working with Vue.js

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     <meta name="description" content="A react web app that displays the time just now.">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="React, Space Balls, sandbox">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
   </head>
 
   <body>
 
-    <div class="mt10 col-6 mx-auto">
-      <div class="border rounded">
-        <h1 class="m0 center">JUST NOW!</h1>
-      </div>
-    </div>
+    <div id="justnow" class="pt10 col-6 mx-auto"></div>
     
-    <script src="/build/built.js"></script>
+    <script type="text/babel" src="/src/js/main.js"></script>
 
   </body>
 
